# bundle_adjustment

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: generate_data.py  main.cpp  make_bal.cpp  make_bal.py  make_bal.sh
src/utilities/: BundleAdjuster.cpp  BundleAdjuster.hpp  DatasetLoader.cpp  DatasetLoader.hpp  Structs.hpp  Visualize.cpp  Visualize.hpp  math.cpp  math.hpp
